--- a/manifests/codeready-workspaces.crd.yaml
+++ b/manifests/codeready-workspaces.crd.yaml
@@ -81,6 +81,14 @@ spec:
                     for `nightly` or `latest` images, and `IfNotPresent` in other
                     cases.
                   type: string
+                identityProviderIngress:
+                  description: Ingress custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 identityProviderPassword:
                   description: Overrides the password of Keycloak admin user. This
                     is useful to override it ONLY if you use an external Identity
@@ -111,6 +119,14 @@ spec:
                     field). If omitted or left blank, it will be set to the value
                     of the `flavour` field.
                   type: string
+                identityProviderRoute:
+                  description: Route custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 identityProviderSecret:
                   description: 'The secret that contains `user` and `password` for
                     Identity Provider. If the secret is defined then `identityProviderAdminUserName`
@@ -230,7 +246,10 @@ spec:
                   description: Strategy for ingress creation. This can be `multi-host`
                     (host is explicitly provided in ingress), `single-host` (host
                     is provided, path-based rules) and `default-host.*`(no host is
-                    provided, path-based rules). Defaults to `"multi-host`
+                    provided, path-based rules). Defaults to `"multi-host` Deprecated
+                    in favor of "serverExposureStrategy" in the "server" section,
+                    which defines this regardless of the cluster type. If both are
+                    defined, `serverExposureStrategy` takes precedence.
                   type: string
                 securityContextFsGroup:
                   description: FSGroup the Che pod and Workspace pods containers should
@@ -239,6 +258,16 @@ spec:
                 securityContextRunAsUser:
                   description: ID of the user the Che pod and Workspace pods containers
                     should run as. Default to `1724`.
+                  type: string
+                singleHostExposureType:
+                  description: When the serverExposureStrategy is set to "single-host",
+                    the way the server, registries and workspaces are exposed is further
+                    configured by this property. The possible values are "native"
+                    (which means that the server and workspaces are exposed using
+                    ingresses on K8s) or "gateway" where the server and workspaces
+                    are exposed using a custom gateway based on Traefik. All the endpoints
+                    whether backed by the ingress or gateway "route" always point
+                    to the subpaths on the same domain. Defaults to "native".
                   type: string
                 tlsSecretName:
                   description: Name of a secret that will be used to setup ingress
@@ -315,6 +344,22 @@ spec:
                   description: 'Log level for the Che server: `INFO` or `DEBUG`. Defaults
                     to `INFO`.'
                   type: string
+                cheServerIngress:
+                  description: Che server ingress custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
+                cheServerRoute:
+                  description: Che server route custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 cheWorkspaceClusterRole:
                   description: Custom cluster role bound to the user for the Che workspaces.
                     The default roles are used if this is omitted or left blank.
@@ -335,6 +380,14 @@ spec:
                     deployment. This includes the image tag. Omit it or leave it empty
                     to use the defaut container image provided by the operator.
                   type: string
+                devfileRegistryIngress:
+                  description: Devfile registry ingress custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 devfileRegistryMemoryLimit:
                   description: Overrides the memory limit used in the Devfile registry
                     deployment. Defaults to 256Mi.
@@ -348,6 +401,14 @@ spec:
                     registry deployment. Default value is `Always` for `nightly` or
                     `latest` images, and `IfNotPresent` in other cases.
                   type: string
+                devfileRegistryRoute:
+                  description: Devfile registry route custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 devfileRegistryUrl:
                   description: Public URL of the Devfile registry, that serves sample,
                     ready-to-use devfiles. You should set it ONLY if you use an external
@@ -374,21 +435,30 @@ spec:
                     particular configuration for Git.
                   type: boolean
                 nonProxyHosts:
-                  description: List of hosts that should not use the configured proxy.
-                    Use `|`` as delimiter, eg `localhost|my.host.com|123.42.12.32`
+                  description: 'List of hosts that should not use the configured proxy.
+                    So specify wild card domain use the following form `.<DOMAIN>`
+                    and `|` as delimiter, eg: `localhost|.my.host.com|123.42.12.32`
                     Only use when configuring a proxy is required. Operator respects
                     OpenShift cluster wide proxy configuration and no additional configuration
                     is required, but defining `nonProxyHosts` in a custom resource
                     leads to merging non proxy hosts lists from the cluster proxy
                     configuration and ones defined in the custom resources. (see the
                     doc https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html)
-                    (see also the `proxyURL` fields).
+                    (see also the `proxyURL` fields).'
                   type: string
                 pluginRegistryImage:
                   description: Overrides the container image used in the Plugin registry
                     deployment. This includes the image tag. Omit it or leave it empty
-                    to use the defaut container image provided by the operator.
+                    to use the default container image provided by the operator.
                   type: string
+                pluginRegistryIngress:
+                  description: Plugin registry ingress custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 pluginRegistryMemoryLimit:
                   description: Overrides the memory limit used in the Plugin registry
                     deployment. Defaults to 256Mi.
@@ -402,6 +472,14 @@ spec:
                     registry deployment. Default value is `Always` for `nightly` or
                     `latest` images, and `IfNotPresent` in other cases.
                   type: string
+                pluginRegistryRoute:
+                  description: Plugin registry route custom settings
+                  properties:
+                    labels:
+                      description: Comma separated list of labels that can be used
+                        to organize and categorize (scope and select) objects.
+                      type: string
+                  type: object
                 pluginRegistryUrl:
                   description: Public URL of the Plugin registry, that serves sample
                     ready-to-use devfiles. You should set it ONLY if you use an external
@@ -445,6 +523,19 @@ spec:
                     operator will automatically detect if router certificate is self-signed.
                     If so it will be propagated to Che server and some other components.
                   type: boolean
+                serverExposureStrategy:
+                  description: Sets the server and workspaces exposure type. Possible
+                    values are "multi-host", "single-host", "default-host". Defaults
+                    to "multi-host" which creates a separate ingress (or route on
+                    OpenShift) for every required endpoint. "single-host" makes Che
+                    exposed on a single hostname with workspaces exposed on subpaths.
+                    Please read the docs to learn about the limitations of this approach.
+                    Also consult the `singleHostExposureType` property to further
+                    configure how the operator and Che server make that happen on
+                    Kubernetes. "default-host" exposes che server on the host of the
+                    cluster. Please read the docs to learn about the limitations of
+                    this approach.
+                  type: string
                 serverMemoryLimit:
                   description: Overrides the memory limit used in the Che server deployment.
                     Defaults to 1Gi.
@@ -459,6 +550,22 @@ spec:
                     when adding the OpenShift OAuth provider which has https endpoint
                     signed with self-signed cert. So, Che server must be aware of
                     its CA cert to be able to request it. This is disabled by default.
+                  type: string
+                singleHostGatewayConfigMapLabels:
+                  additionalProperties:
+                    type: string
+                  description: The labels that need to be present (and are put) on
+                    the configmaps representing the gateway configuration.
+                  type: object
+                singleHostGatewayConfigSidecarImage:
+                  description: The image used for the gateway sidecar that provides
+                    configuration to the gateway. Omit it or leave it empty to use
+                    the defaut container image provided by the operator.
+                  type: string
+                singleHostGatewayImage:
+                  description: The image used for the gateway in the single host mode.
+                    Omit it or leave it empty to use the defaut container image provided
+                    by the operator.
                   type: string
                 tlsSupport:
                   description: Deprecated. Instructs the operator to deploy Che in
