--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -50,7 +50,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.5
-    createdAt: "2020-10-02T17:52:15+00:00"
+    createdAt: "2020-10-02T18:00:02+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -304,32 +304,40 @@ spec:
                         value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.5
                       - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
                         value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.5
+                      - name: RELATED_IMAGE_codeready_workspaces_machineexec
+                        value: registry.redhat.io/codeready-workspaces/machineexec-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11
-                        value: registry.redhat.io/codeready-workspaces/plugin-java11-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java11-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_openj9
-                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_ppc64le
-                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_s390x
-                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java11-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8
-                        value: registry.redhat.io/codeready-workspaces/plugin-java8-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java8-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_openj9
-                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_ppc64le
-                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_s390x
-                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/plugin-java8-openj9-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_kubernetes
                         value: registry.redhat.io/codeready-workspaces/plugin-kubernetes-rhel8:2.5
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_openshift
+                        value: registry.redhat.io/codeready-workspaces/plugin-openshift-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_stacks_cpp
-                        value: registry.redhat.io/codeready-workspaces/stacks-cpp-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/stacks-cpp-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_stacks_dotnet
-                        value: registry.redhat.io/codeready-workspaces/stacks-dotnet-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/stacks-dotnet-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_stacks_golang
-                        value: registry.redhat.io/codeready-workspaces/stacks-golang-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/stacks-golang-rhel8:2.5
                       - name: RELATED_IMAGE_codeready_workspaces_stacks_php
-                        value: registry.redhat.io/codeready-workspaces/stacks-php-rhel8:2.4
+                        value: registry.redhat.io/codeready-workspaces/stacks-php-rhel8:2.5
+                      - name: RELATED_IMAGE_codeready_workspaces_theia
+                        value: registry.redhat.io/codeready-workspaces/theia-rhel8:2.5
+                      - name: RELATED_IMAGE_codeready_workspaces_theia_endpoint
+                        value: registry.redhat.io/codeready-workspaces/theia-endpoint-rhel8:2.5
                       - name: RELATED_IMAGE_devfile_registry
                         value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.5
                       - name: RELATED_IMAGE_jboss_eap_7_eap73_openjdk8_openshift_rhel7
