--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -50,7 +50,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.5
-    createdAt: "2020-10-05T21:15:11+00:00"
+    createdAt: "2020-10-05T21:26:44+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -365,9 +365,9 @@ spec:
                       - name: RELATED_IMAGE_rhscl_mongodb_36_rhel7
                         value: registry.redhat.io/rhscl/mongodb-36-rhel7:1-50
                       - name: RELATED_IMAGE_single_host_gateway
-                        value: quay.io/crw/traefik:v2.2.8
+                        value: registry.redhat.io/ubi8/ubi-minimal:8.2
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: quay.io/crw/configbump:0.1.4
+                        value: registry.redhat.io/ubi8/ubi-minimal:8.2
                       - name: WATCH_NAMESPACE
                         valueFrom:
                           fieldRef:
