CRW-1044 use internal image for operator, as codeready-workspaces-crw-2-rhel8-operator only exists in RHEC and Quay repos
Change-Id: I9c4574116c17602ed546afe14fd2b9cb56a4505d
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -49,8 +49,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools, OpenShift Optional
     certified: "true"
-    containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.5
-    createdAt: "2020-10-05T21:26:44+00:00"
+    containerImage: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.5
+    createdAt: "2020-10-07T19:10:35+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -372,7 +372,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.annotations['olm.targetNamespaces']
-                    image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.5
+                    image: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.5
                     imagePullPolicy: Always
                     name: codeready-operator
                     ports:
