--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -54,7 +54,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.5
-    createdAt: "2020-10-28T19:07:44+00:00"
+    createdAt: "2020-10-29T04:23:22+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -371,9 +371,9 @@ spec:
                       - name: RELATED_IMAGE_rhscl_mongodb_36_rhel7
                         value: registry.redhat.io/rhscl/mongodb-36-rhel7:1-50
                       - name: RELATED_IMAGE_single_host_gateway
-                        value: registry.redhat.io/ubi8/ubi-minimal:8.2
+                        value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.5
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: registry.redhat.io/ubi8/ubi-minimal:8.2
+                        value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.5
                       - name: WATCH_NAMESPACE
                         valueFrom:
                           fieldRef:
