--- a/manifests/codeready-workspaces.crd.yaml
+++ b/manifests/codeready-workspaces.crd.yaml
@@ -25,16 +25,18 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
+      description: The `CheCluster` custom resource allows defining and managing a
+        Che server installation
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -158,12 +160,15 @@ spec:
                   type: string
                 openShiftoAuth:
                   description: 'Enables the integration of the identity provider (Keycloak
-                    / RHSSO) with OpenShift OAuth. Enabled by default on OpenShift.
-                    This will allow users to directly login with their Openshift user
-                    through the Openshift login, and have their workspaces created
-                    under personal OpenShift namespaces. WARNING: the `kubeadmin`
-                    user is NOT supported, and logging through it will NOT allow accessing
-                    the Che Dashboard.'
+                    / RHSSO) with OpenShift OAuth. Empty value on the OpenShift platform
+                    by default. If user changes this empty value to true/false, then
+                    che-operator respect this value. Otherwise che-operator tries
+                    to auto detect if Openshift oAuth can be enabled and change empty
+                    value, correspondly to auto-detection result. This property allows
+                    users to directly login with their Openshift user through the
+                    Openshift login, and have their workspaces created under personal
+                    OpenShift namespaces. WARNING: the `kubeadmin` user is NOT supported,
+                    and logging through it will NOT allow accessing the Che Dashboard.'
                   type: boolean
                 updateAdminPassword:
                   description: Forces the default `admin` Che user to update password
@@ -230,6 +235,46 @@ spec:
                     `latest` images, and `IfNotPresent` in other cases.
                   type: string
               type: object
+            imagePuller:
+              description: Kubernetes Image Puller configuration
+              properties:
+                enable:
+                  description: "Install and configure the Community Supported Kubernetes\
+                    \ Image Puller Operator. If true and no spec is provided, it will\
+                    \ create a default KubernetesImagePuller object to be managed\
+                    \ by the Operator. If false, the KubernetesImagePuller object\
+                    \ will be deleted, and the operator will be uninstalled, regardless\
+                    \ of whether or not a spec is provided. \n Please note that while\
+                    \ this operator and its behavior is community-supported, its payload\
+                    \ may be commercially-supported if you use it for pulling commercially-supported\
+                    \ images."
+                  type: boolean
+                spec:
+                  description: A KubernetesImagePullerSpec to configure the image
+                    puller in the CheCluster
+                  properties:
+                    cachingCPULimit:
+                      type: string
+                    cachingCPURequest:
+                      type: string
+                    cachingIntervalHours:
+                      type: string
+                    cachingMemoryLimit:
+                      type: string
+                    cachingMemoryRequest:
+                      type: string
+                    configMapName:
+                      type: string
+                    daemonsetName:
+                      type: string
+                    deploymentName:
+                      type: string
+                    images:
+                      type: string
+                    nodeSelector:
+                      type: string
+                  type: object
+              type: object
             k8s:
               description: Configuration settings specific to Che installations made
                 on upstream Kubernetes.
@@ -271,8 +316,13 @@ spec:
                     to the subpaths on the same domain. Defaults to "native".
                   type: string
                 tlsSecretName:
-                  description: Name of a secret that will be used to setup ingress
-                    TLS termination if TLS is enabled. See also the `tlsSupport` field.
+                  description: Name of a secret that is used to set ingress TLS termination
+                    if TLS is enabled. If the specified secret does not exist, a self-signed
+                    certificate will be created. If the value is empty or omitted,
+                    the default ingress controller certificate will be used. See also
+                    the `tlsSupport` field. Note, when switching to the default ingress
+                    controller certificate, `self-signed-certificate` secret should
+                    be deleted manually.
                   type: string
               type: object
             metrics:
@@ -307,6 +357,12 @@ spec:
                     to configured true without OAuth configured. This property is
                     also used by the OpenShift infra.
                   type: boolean
+                cheClusterRoles:
+                  description: Comma-separated list of ClusterRoles that will be assigned
+                    to che ServiceAccount. Be aware that che-operator has to already
+                    have all permissions in these ClusterRoles to be able to grant
+                    them.
+                  type: string
                 cheDebug:
                   description: Enables the debug mode for Che server. Defaults to
                     `false`.
@@ -572,6 +628,11 @@ spec:
                   description: Deprecated. Instructs the operator to deploy Che in
                     TLS mode. This is enabled by default. Disabling TLS may cause
                     malfunction of some Che components.
+                  type: boolean
+                useInternalClusterSVCNames:
+                  description: Use internal cluster svc names to communicate between
+                    components to speed up the traffic and avoid proxy issues. The
+                    default value is `true`.
                   type: boolean
                 workspaceNamespaceDefault:
                   description: 'Defines Kubernetes default namespace in which user''s
