--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
-language: node_js
+language: minimal
 sudo: required
 dist: trusty
 group: bluezone
-node_js:
-- 12.4.0
 services:
 - docker
 env:
   global:
-  - REPOSITORY="docker.io"
-  - FOLDER_PATH="/ibmcom/"
-  - IMAGE_NAME="wazi-code-operator-catalog"
-install: docker build -t ${REPOSITORY}${FOLDER_PATH}${IMAGE_NAME}:latest .
+  - IMAGE="docker.io/ibmcom/wazi-code-operator-catalog"
+install: docker build -t ${IMAGE}:travis .
 script: echo "Success!"
 notifications:
   slack: ibm-systems-z:kiD2FZtJUJtUSp57dwHWwNX1
