--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -90,9 +90,9 @@ spec:
             - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
               value: ca-certs
             - name: RELATED_IMAGE_keycloak_ppc64le
-              value: quay.io/eclipse/che-keycloak@sha256:9b3c978c03ba9aa493396de5e42ed4324201de70e81219d124014646b78bd69b
+              value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
             - name: RELATED_IMAGE_keycloak_s390x
-              value: quay.io/eclipse/che-keycloak@sha256:9b3c978c03ba9aa493396de5e42ed4324201de70e81219d124014646b78bd69b
+              value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
           livenessProbe:
             httpGet:
               path: /healthz
