CRW-1579 set correct crw-2-rhel8-operator image and tag in operator.yaml
Change-Id: I61a7605514359b577a98771d23fe9faa29beb2e3
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: codeready-operator
-          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:latest
+          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.8
           ports:
             - containerPort: 60000
               name: metrics
