--- a/catalog-source/catalog-source-1.1.0.yaml
+++ b/catalog-source/catalog-source-1.1.0.yaml
@@ -22,7 +22,7 @@ metadata:
     app.kubernetes.io/version: "1.1.0"
     app.kubernetes.io/component: workspaces
     app.kubernetes.io/part-of: wazi-developer
-    app.kubernetes.io/managed-by: operator
+    app.kubernetes.io/managed-by: olm
   annotations:
     productID: "9d41d2d8126f4200b62ba1acc0dffa2e"
     productName: "IBM Wazi Developer for Red Hat CodeReady Workspaces"
