--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -195,6 +195,7 @@ rules:
       - get
       - list
       - watch
+      - delete
   - apiGroups:
       - ''
     resources:
@@ -273,6 +274,7 @@ rules:
     verbs:
       - get
       - create
+      - update
   - apiGroups:
       - operators.coreos.com
     resources:
