--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: codeready-operator
-          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.9
+          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.10
           ports:
             - containerPort: 60000
               name: metrics
@@ -48,35 +48,35 @@ spec:
             - name: OPERATOR_NAME
               value: codeready-operator
             - name: CHE_VERSION
-              value: 2.9.0
+              value: 2.10.0
             - name: RELATED_IMAGE_che_server
-              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.10
             - name: RELATED_IMAGE_dashboard
-              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.10
             - name: RELATED_IMAGE_plugin_registry
-              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.10
             - name: RELATED_IMAGE_devfile_registry
-              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.10
             - name: RELATED_IMAGE_pvc_jobs
-              value: registry.redhat.io/ubi8/ubi-minimal:8.3
+              value: registry.redhat.io/ubi8/ubi-minimal:8.4
             - name: RELATED_IMAGE_postgres
               value: registry.redhat.io/rhel8/postgresql-96:1
             - name: RELATED_IMAGE_keycloak
               value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
             - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.10
             - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.10
             - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
-              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.10
             - name: RELATED_IMAGE_single_host_gateway
-              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.10
             - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.10
             - name: RELATED_IMAGE_devworkspace_che_operator
-              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.10
             - name: RELATED_IMAGE_devworkspace_controller
-              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.9
+              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.10
             - name: CHE_FLAVOR
               value: codeready
             - name: CONSOLE_LINK_NAME
@@ -119,6 +119,8 @@ spec:
             successThreshold: 1
             timeoutSeconds: 5
           securityContext:
+            privileged: false
+            readOnlyRootFilesystem: false
             capabilities:
               drop:
                 - ALL
@@ -129,6 +131,9 @@ spec:
             limits:
               memory: 256Mi
               cpu: 500m
+      hostIPC: false
+      hostNetwork: false
+      hostPID: false
       restartPolicy: Always
       serviceAccountName: codeready-operator
       terminationGracePeriodSeconds: 20
