--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -71,7 +71,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.10
-    createdAt: "2021-06-04T20:47:41+00:00"
+    createdAt: "2021-06-28T12:14:13+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -425,6 +425,7 @@ spec:
                 - get
                 - list
                 - watch
+                - delete
             - apiGroups:
                 - ""
               resources:
