--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -16,3 +16,6 @@ metadata:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
     app.kubernetes.io/component: codeready-operator
+    app.kubernetes.io/managed-by: olm
+imagePullSecrets:
+  - name: codeready-operator
