--- a/deploy/namespaces_cluster_role.yaml
+++ b/deploy/namespaces_cluster_role.yaml
@@ -16,6 +16,7 @@ metadata:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
     app.kubernetes.io/component: codeready-operator
+    app.kubernetes.io/managed-by: olm
 rules:
   - apiGroups:
       - ""
